...
            ),
          ),
        ),
        Align(
          alignment: const Alignment(0, -0.2),
          child: Text(
            '画面をタップしたらスタートするよ',
            style: TextStyle(
              fontSize: SizeConfig.blockSizeVertical! * 2,
              color: Colors.white,
            ),
          ),
        ),
...
