...
                                  child: Stack(
                                    children: [
                                      clearLevel > level
                                          ? Align(
                                              alignment: const Alignment(0, 1),
                                              child: Text(
                                                'CLEAR',
                                                style: TextStyle(
                                                  fontSize:
                                                      SizeConfig
                                                          .blockSizeVertical! *
                                                      1.7,
                                                  color: Colors.green,
...
